
syntax = "proto3";

option java_multiple_files = true;
option java_package = "datatier.protobuf";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

message DebitCard {
  int64 cardId = 1;
  int64 cardNumber = 2;
  string expiryDate = 3;
  int32 cvv = 4;
}

message User{
  int64 userId = 1;
  string fullName = 2;
  string userName = 3;
  string password = 4;
  DebitCard card = 5;
}

message UpdateUserWithId {
  int64 userId = 1;
  User user = 2;
}

message UpdateCardWithId {
  int64 cardId = 1;
  DebitCard card = 2;
}


service UserService {
  rpc createUser (User) returns (User);
  rpc fetchAllUsers (google.protobuf.Empty) returns (stream User);
  rpc fetchUserById(google.protobuf.Int64Value) returns (User);
  rpc deleteUserById(google.protobuf.Int64Value) returns (google.protobuf.Empty);
  rpc updateUser(UpdateUserWithId) returns (User);
}

service CardService {
  rpc createCard (DebitCard) returns (DebitCard);
  rpc fetchCardByUserName (google.protobuf.StringValue) returns (DebitCard);
  rpc updateCard (UpdateUserWithId) returns (DebitCard);
  rpc deleteCard (google.protobuf.Int64Value) returns (google.protobuf.Empty);
}

