syntax = "proto3";

option csharp_namespace = "SEP3_DataTier";

import "google/protobuf/wrappers.proto";
import "Protos/user.proto";
import "google/protobuf/empty.proto";

message TransactionProtoObj {
  google.protobuf.Int64Value transaction_id = 1;
  UserProtoObj senderUser = 2;
  UserProtoObj receiverUser = 3;
  google.protobuf.Int32Value amount = 4;
  google.protobuf.StringValue date = 5;
  google.protobuf.StringValue comment = 6;
}

message FilterByUserAndDateProtoObj {
  google.protobuf.StringValue username = 1;
  google.protobuf.StringValue date = 2;
}



service TransactionProtoService {
  rpc CreateTransactionAsync(TransactionProtoObj) returns (TransactionProtoObj);
  rpc FetchTransactionByIdAsync(google.protobuf.Int64Value) returns (TransactionProtoObj);
  rpc FetchAlLTransactionsBySenderAsync(google.protobuf.StringValue) returns (TransactionProtoObjList);
  rpc FetchAllTransactionsByReceiverAsync(google.protobuf.StringValue) returns (TransactionProtoObjList);
  rpc FetchAlLTransactionsInvolvingUserAsync(google.protobuf.StringValue) returns (TransactionProtoObjList);
  rpc FetchTransactionsByDateAsync(google.protobuf.StringValue) returns (TransactionProtoObjList);
  rpc FetchTransactionsByUsernameAndDate(FilterByUserAndDateProtoObj) returns (TransactionProtoObjList);
  rpc DeleteTransactionAsync(google.protobuf.Int64Value) returns (google.protobuf.BoolValue);
}

message  TransactionProtoObjList {
  repeated TransactionProtoObj allTransactions = 1;
}